# stack

./: .gitignore  README.md  cabal.config  stack.cabal
app/: Main.hs
doc/model/: model.puml
src/: Fetcher.hs  Repository.hs  Service.hs  User.hs
src/Layer/: Month.hs
src/Layer/Api/: Form.hs  OptionApi.hs  Parameters.hs  ValidationErrors.hs
src/Layer/Domain/: BusinessError.hs  Introduction.hs  IntroductionRepository.hs  Notice.hs  NoticeRepository.hs  OptionRepository.hs  User.hs  UserRepository.hs
src/Layer/Service/: Application.hs  IntroductionService.hs  OptionService.hs  UserService.hs
src/Transformer/: Ex1.hs  Ex2.hs  Ex3.hs  Ex4.hs  Ex5.hs  Types.hs
table/: user.csv
test/: FetcherSpec.hs  RepositorySpec.hs  ServiceSpec.hs
test/Layer/: MonthSpec.hs
test/Layer/Api/: FormSpec.hs  OptionApiSpec.hs  ParametersSpec.hs
test/Layer/Domain/: IntroductionSpec.hs  UserSpec.hs
